--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ locale                   : "en-US"
 title                    : "Home"
 title_separator          : "-"
 name                     : &name "Tajas Sabharwal"
-description              : &description "Hello, my name's Tajas, but my friends call me TJ. I am a recent University of Calgary graduate with a Bachelor of Commerce in Business Analytics."
+description              : &description ""
 url                      : https://TajasSabharwal.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "TajasSabharwal/TajasSabharwal.github.io"
@@ -16,31 +16,31 @@ author:
   avatar           : "profile.jpg"
   name             : "Tajas Sabharwal"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Recent University of Calgary Bachelor of Commerce graduate"
+  location         : "Calgary, AB"
+  employer         : "University of Calgary"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "Tajas.Sabharwal@ucalgary.ca" 
 
   # Academic websites
-  arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  arxiv            : # URL 
+  googlescholar    : #
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : #
   semantic         : # URL
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : #
   researchgate     : # URL
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "TajasSabharwal"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # Username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -49,7 +49,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : TajasSabharwal
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -202,16 +202,16 @@ kramdown:
 # These settings control the types of collections used by the template
 collections:
   teaching:
-    output: true
+    output: false
     permalink: /:collection/:path/
   publications:
-    output: true
+    output: false
     permalink: /:collection/:path/
   portfolio:
     output: true
     permalink: /:collection/:path/
   talks:
-    output: true
+    output: false
     permalink: /:collection/:path/
 
 
