--- a/_config.yml
+++ b/_config.yml
@@ -220,9 +220,9 @@ defaults:
   # _posts
   - scope:
       path: ""
-      type: 
+      type: posts
     values:
-      layout: 
+      layout: single
       author_profile: true
       read_time: true
       comments: true
@@ -231,25 +231,25 @@ defaults:
   # _pages
   - scope:
       path: ""
-      type: 
+      type: pages
     values:
-      layout: 
+      layout: single
       author_profile: true
   # _teaching
   - scope:
       path: ""
-      type: 
+      type: teaching
     values:
-      layout: 
+      layout: single
       author_profile: true
       share: true
       comments: true
   # _publications
   - scope:
       path: ""
-      type: 
+      type: publications
     values:
-      layout: 
+      layout: single
       author_profile: true
       share: true
       comments: true
@@ -265,9 +265,9 @@ defaults:
   # _talks
   - scope:
       path: ""
-      type: 
+      type: talks
     values:
-      layout: 
+      layout: single
       author_profile: true
       share: true
 
