--- a/_config.yml
+++ b/_config.yml
@@ -267,7 +267,7 @@ defaults:
       path: ""
       type: talks
     values:
-      layout: single
+      layout: talk
       author_profile: true
       share: true
 
